# FluentWidgets

./: README.md
CustomWindowComponents/: CMakeLists.txt  README.md
CustomWindowComponents/demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
CustomWindowComponents/src/: CMakeLists.txt  FluentWidgets.h
CustomWindowComponents/src/Animations/: FluentAnimation.cpp  FluentAnimation.h
CustomWindowComponents/src/Core/: FluentConfig.cpp  FluentConfig.h  FluentGlobal.h  FluentTheme.cpp  FluentTheme.h  FluentThemeManager.cpp  FluentThemeManager.h
CustomWindowComponents/src/Effects/: FluentAcrylicEffect.cpp  FluentAcrylicEffect.h  FluentRevealEffect.cpp  FluentRevealEffect.h
CustomWindowComponents/src/Widgets/Base/: FluentWidget.cpp  FluentWidget.h
CustomWindowComponents/src/Widgets/Buttons/: FluentButton.cpp  FluentButton.h
CustomWindowComponents/src/Widgets/Dialog/: FluentContentDialog.cpp  FluentContentDialog.h
CustomWindowComponents/src/Widgets/Display/: FluentInfoBar.cpp  FluentInfoBar.h
CustomWindowComponents/src/Widgets/Input/: FluentCheckBox.cpp  FluentCheckBox.h  FluentLineEdit.cpp  FluentLineEdit.h  FluentToggleSwitch.cpp  FluentToggleSwitch.h
CustomWindowComponents/src/Widgets/Navigation/: FluentNavigationItem.cpp  FluentNavigationItem.h  FluentNavigationView.cpp  FluentNavigationView.h
CustomWindowComponents/src/Widgets/Window/: FluentTitleBar.cpp  FluentTitleBar.h  FluentWindow.cpp  FluentWindow.h
